<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_text"
    android:orientation="vertical"
    tools:context=".GoalsDetailPage">

    <TextView
        android:id="@+id/tvFinance"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/border"
        android:backgroundTint="@color/background_main"
        android:text="@string/tvFinance"
        android:textAlignment="center"
        android:textColor="@color/background_text"
        android:textColorLink="#070000"
        android:textSize="34sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/CalculateTip"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="24dp"
            android:text="@string/TvGoalView"
            android:textAlignment="center"
            android:textColor="@color/background_main"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="24dp"
            android:text="@string/tvGoalAmount"
            android:textAlignment="center"
            android:textColor="@color/background_main"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="24dp"
            android:text="@string/tvMonth"
            android:textAlignment="center"
            android:textColor="@color/background_main"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="24dp"
            android:text="@string/tvStartDate"
            android:textAlignment="center"
            android:textColor="@color/background_main"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvCalculation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:text="@string/tvCalculation"
            android:textColor="@color/background_main"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="100dp"
            android:backgroundTint="@color/btnColor"
            android:drawableLeft="@drawable/icon_calculate"
            android:text="@string/BtnCalculate"
            android:textSize="14sp"
            android:textStyle="bold"
            app:cornerRadius="18dp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="100dp"
            android:backgroundTint="@color/btnColor"
            android:drawableLeft="@drawable/edit_icon"
            android:text="@string/btnEditGoal"
            android:textSize="14sp"
            android:textStyle="bold"
            app:cornerRadius="18dp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="100dp"
            android:backgroundTint="@color/btnColor"
            android:drawableLeft="@drawable/icon_back"
            android:text="@string/btnBackList"
            android:textSize="14sp"
            android:textStyle="bold"
            app:cornerRadius="18dp" />

    </LinearLayout>


</LinearLayout>