<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainDashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_text"
    android:orientation="vertical"
    app:layout_insetEdge="none"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvCreditTracker"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/border"
        android:backgroundTint="@color/background_main"
        android:gravity="center"
        android:text="@string/tvCreditTracker"
        android:textAlignment="center"
        android:textColor="@color/background_text"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvCurrentAmount"
        android:layout_width="388dp"
        android:layout_height="63dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="16dp"
        android:text="@string/tvCurrentAmount"
        android:textAlignment="center"
        android:textColor="@color/background_main"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvShowAmount"
        android:layout_width="380dp"
        android:layout_height="78dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="20dp"
        android:background="@color/textBox"
        android:text="@string/tvShowAmount"
        android:textAlignment="center"
        android:textColor="@color/mentalHealthc3"
        android:textSize="48sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnAddNewExpense"
        android:layout_width="340dp"
        android:layout_height="67dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="35dp"
        android:backgroundTint="@color/btnColor"
        android:drawableLeft="@drawable/add_small"
        android:drawablePadding="2dp"
        android:text="@string/btnAddNewExpense"
        android:textSize="20sp"
        app:cornerRadius="18dp" />

    <Button
        android:id="@+id/btnMyExpenses"
        android:layout_width="342dp"
        android:layout_height="60dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="35dp"
        android:backgroundTint="@color/btnColor"
        android:drawableLeft="@drawable/list_icon"
        android:drawablePadding="2dp"
        android:text="@string/btnMyExpenses"
        android:textSize="20sp"
        app:cornerRadius="18dp" />

</LinearLayout>

